# ApiSynIQ

./: .env  .gitignore  README.md  compose.yaml  docker-compose.yaml  init.sql  pom.xml
ApiGateway/: Dockerfile  go.mod  go.sum
ApiGateway/cmd/AudioGrpc/: StreamAudio.go
ApiGateway/cmd/Websocket/: Routes.go
ApiGateway/cmd/main/: main.go
ApiGateway/cmd/main/static/: index.html  (+1 more)
ApiGateway/pkg/Websocket/: client.go  hub.go
ApiGateway/pkg/proto/: ApiSyncService.pb.go  ApiSyncService.proto  ApiSyncService_grpc.pb.go
ApiGateway/pkg/stub/: ApiOrchestrator.go
ApiOrchestrator/: .gitignore  README.md  pyproject.toml  requirements.txt
ApiOrchestrator/src/main/: main.py
ApiOrchestrator/src/main/Generation/: CheckPointer.py  Data.py  DeepAgent.py  DeepAgentTools.py  RunAgents.py  Speak.py  SubAgent.py  SubAgentTools.py  Tools.py  Utils.py  graph_workflow.py  prompts.py  testSubAgent.py  testing.py
ApiOrchestrator/src/main/InferenceProfileManagement/: create_profile.py
ApiOrchestrator/src/main/Processing/: StringToPydantic.py
ApiOrchestrator/src/main/Querying/: RestApi.py
ApiOrchestrator/src/main/Retrieval/: FetchApi.py  GrpcServer.py  data_pb2.py  data_pb2.pyi  data_pb2_grpc.py
ApiOrchestrator/src/main/Retrieval/proto/: data.proto
ApiOrchestrator/src/main/Transcribe/: SpeechToText.py  TextToSpeech.py  Whisper.py
ApiOrchestrator/src/main/Transcribe/STT/: Factory.py  Interface.py  Vosk.py  Whisper.py
ApiOrchestrator/src/main/grpc/proto/: data_pb2.py  data_pb2_grpc.py
ApiResolver/: .env  Dockerfile  pom.xml
Architecture/: sample.py
Examples/java-annotation-usage/: pom.xml
Java_Agent/: Dockerfile  pom.xml
example-usage/: pom.xml
(+95 files in other folders)
