[project]
name = "apiorchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "piper-tts>=1.3.0",
    "pydantic>=2.12.4",
    "pydict2class>=0.0.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "vosk>=0.3.45",
]
