[project]
name = "apiorchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faster-whisper==1.2.1",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langgraph>=1.0.4",
    "numpy==1.26.4",
    "piper-tts>=1.3.0",
    "pydantic>=2.12.4",
    "pydict2class>=0.0.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "vosk>=0.3.45",
]
