[project]
name = "apiorchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.42.6",
    "dotenv>=0.9.9",
    "fastapi>=0.124.0",
    "faster-whisper==1.2.1",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "langchain>=1.1.0",
    "langchain-aws>=1.1.0",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "numpy>=2.3.2",
    "piper-tts>=1.3.0",
    "pydantic>=2.12.4",
    "pydict2class>=0.0.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "uvicorn>=0.38.0",
    "vosk>=0.3.45",
]
